--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,34 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+
+    <TextView
+        android:id="@+id/Username_main"
+        android:layout_width="295dp"
+        android:layout_height="47dp"
+        android:gravity="center"
+
+
+        android:text="@string/set_username" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
+        android:layout_height="700dp"
+        android:background="@color/white">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <!--    <TextView-->
+    <!--        android:id="@+id/textView"-->
+    <!--        android:layout_width="230dp"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:text="@string/my_task"-->
+    <!--        android:textSize="60sp"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toTopOf="parent"-->
+    <!--        tools:layout_marginBottom="50sp" />-->
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/black"/>
+        android:orientation="horizontal">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/addBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="30sp"
+            android:layout_marginRight="30sp"
+            android:layout_marginBottom="6dp"
+            android:text="@string/add_task" />
 
-<!--    <TextView-->
-<!--        android:id="@+id/textView"-->
-<!--        android:layout_width="194dp"-->
-<!--        android:layout_height="58dp"-->
-<!--        android:layout_marginStart="32dp"-->
-<!--        android:layout_marginTop="67dp"-->
-<!--        android:layout_marginEnd="185dp"-->
-<!--        android:layout_marginBottom="607dp"-->
-<!--        android:text="@string/my_task"-->
-<!--        android:textSize="40sp"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
+        <Button
+            android:id="@+id/allTaskBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="140sp"
+            android:layout_marginRight="140sp"
+            android:text="@string/all_task_txt" />
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="37dp"
+            android:layout_marginEnd="6dp"
+            android:layout_marginRight="6dp"
+            android:contentDescription="@string/menu"
+            app:srcCompat="@android:drawable/ic_menu_manage"
+            tools:layout_marginTop="40sp" />
+    </LinearLayout>
+
+</LinearLayout>
+
+
 
 <!--    <ImageView-->
 <!--        android:id="@+id/imageView"-->
@@ -43,30 +86,7 @@
 <!--        app:layout_constraintTop_toBottomOf="@+id/textView"-->
 <!--        tools:srcCompat="@drawable/ic_launcher_foreground" />-->
 
-<!--    <Button-->
-<!--        android:id="@+id/addBtn"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="102dp"-->
-<!--        android:layout_marginBottom="6dp"-->
-<!--        android:text="@string/add_task"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/title_a" />-->
 
-<!--    <Button-->
-<!--        android:id="@+id/allTaskBtn"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="227dp"-->
-<!--        android:layout_marginTop="676dp"-->
-<!--        android:layout_marginEnd="6dp"-->
-<!--        android:layout_marginBottom="7dp"-->
-<!--        android:text="@string/all_task_txt"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toEndOf="@+id/addBtn"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
 
 <!--    <Button-->
 <!--        android:id="@+id/title_a"-->
@@ -101,32 +121,6 @@
 <!--        app:layout_constraintBottom_toTopOf="@+id/allTaskBtn"-->
 <!--        app:layout_constraintEnd_toEndOf="parent" />-->
 
-<!--    <TextView-->
-<!--        android:id="@+id/Username_main"-->
-<!--        android:layout_width="110dp"-->
-<!--        android:layout_height="47dp"-->
-<!--        android:layout_marginTop="26dp"-->
-<!--        android:layout_marginEnd="154dp"-->
-<!--        android:layout_marginBottom="161dp"-->
-<!--        android:text="@string/set_username"-->
-<!--        app:layout_constraintBottom_toTopOf="@+id/title_b"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/imageView" />-->
-
-<!--    <ImageButton-->
-<!--        android:id="@+id/imageButton"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="349dp"-->
-<!--        android:layout_marginTop="5dp"-->
-<!--        android:layout_marginEnd="6dp"-->
-<!--        android:layout_marginBottom="471dp"-->
-<!--        app:layout_constraintBottom_toTopOf="@+id/title_c"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:srcCompat="@android:drawable/ic_menu_manage"-->
-<!--        android:contentDescription="@string/menu" />-->
 
 
 <!--</LinearLayout>-->
