--- a/app/src/main/res/layout/activity_setting_page.xml
+++ b/app/src/main/res/layout/activity_setting_page.xml
@@ -3,68 +3,101 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".SettingPage">
 
     <TextView
         android:id="@+id/username_txt_view"
-        android:layout_width="102dp"
-        android:layout_height="78dp"
-        android:layout_marginStart="51dp"
-        android:layout_marginTop="244dp"
-        android:layout_marginEnd="146dp"
+        android:layout_width="142dp"
+        android:layout_height="38dp"
+
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="39dp"
+        android:layout_marginEnd="74dp"
+        android:layout_marginRight="74dp"
+        android:layout_marginBottom="29dp"
         android:text="@string/new_user_name"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+        app:layout_constraintBottom_toTopOf="@+id/team_member"
         app:layout_constraintEnd_toStartOf="@+id/username_edit_txt"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="11dp"
-        android:layout_marginRight="146dp" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/team_member"
+        android:layout_width="138dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="29dp"
+        android:layout_marginBottom="454dp"
+        android:text="Team Name"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/username_txt_view" />
 
     <EditText
         android:id="@+id/username_edit_txt"
-        android:layout_width="140dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="68dp"
-        android:layout_marginTop="242dp"
-        android:layout_marginEnd="90dp"
-        android:layout_marginBottom="237dp"
-        android:hint="@string/new_username"
+        android:layout_width="170dp"
+        android:layout_height="48dp"
+
+        android:layout_marginStart="60dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="34dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
         android:autofillHints="none"
+        android:hint="@string/new_username"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/save_username_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/username_txt_view"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="68dp"
-        android:layout_marginRight="90dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/save_username_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         android:layout_marginStart="162dp"
-        android:layout_marginTop="237dp"
+        android:layout_marginLeft="162dp"
+        android:layout_marginTop="307dp"
         android:layout_marginEnd="162dp"
-        android:layout_marginBottom="158dp"
+        android:layout_marginRight="162dp"
         android:text="@string/save_btn"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username_txt_view" />
+        app:layout_constraintTop_toBottomOf="@+id/spinnerTeam" />
+
     <Button
         android:id="@+id/goHome_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         android:layout_marginStart="162dp"
-        android:layout_marginTop="237dp"
+        android:layout_marginLeft="162dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="162dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginRight="162dp"
+        android:layout_marginBottom="17dp"
         android:text="@string/go_home"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username_txt_view" />
+        app:layout_constraintTop_toBottomOf="@+id/save_username_btn" />
+
+    <Spinner
+        android:id="@+id/spinnerTeamS"
+        android:layout_width="208dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="33dp"
+        android:layout_marginLeft="33dp"
+        android:layout_marginTop="38dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/team_member"
+        app:layout_constraintTop_toBottomOf="@+id/username_edit_txt" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
