--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -37,7 +37,8 @@
             android:layout_marginTop="40dp"
             android:text="@string/task_describtion"
             android:textColor="@color/black"
-            android:textSize="18sp">
+            android:textSize="18sp"
+            android:layout_marginLeft="20dp">
 
         </TextView>
 
