--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,9 +54,31 @@
             android:id="@+id/allTaskBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="140sp"
-            android:layout_marginRight="140sp"
+            android:layout_marginEnd="50sp"
             android:text="@string/all_task_txt" />
+
+        <Button
+            android:id="@+id/log_out"
+            android:layout_width="50dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="120sp"
+            android:layout_marginRight="100sp"
+            android:text="Log Out" />
+<!--        <Button-->
+<!--            android:id="@+id/log_out"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="162dp"-->
+<!--            android:layout_marginLeft="162dp"-->
+<!--            android:layout_marginTop="15dp"-->
+<!--            android:layout_marginEnd="162dp"-->
+<!--            android:layout_marginRight="162dp"-->
+<!--            android:layout_marginBottom="17dp"-->
+<!--            android:text="Log Out"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/goHome_btn" />-->
 
         <ImageButton
             android:id="@+id/imageButton"
