--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -64,10 +65,26 @@
         android:id="@+id/spinner"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-
         />
+    <TextView
+        android:id="@+id/Teams"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Task Team :"
+        android:textSize="25sp" />
     <Spinner
         android:id="@+id/spinnerTeam"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        />
+    <TextView
+        android:id="@+id/file_type"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="File Type :"
+        android:textSize="25sp" />
+    <Spinner
+        android:id="@+id/spinnerFileType"
         android:layout_width="match_parent"
         android:layout_height="50dp"
 
@@ -79,39 +96,56 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="0dp"
         android:layout_marginEnd="30dp"
         android:layout_marginRight="30dp"
         android:text="@string/add_task_btn" />
 
-    <Button
-        android:id="@+id/goHome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="1sp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginBottom="1dp"
-        android:baselineAligned="false"
-        android:text="@string/go_home" />
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/go_details"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/go_details" />
+        <Button
+            android:id="@+id/goHome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="1sp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginBottom="1dp"
+            android:baselineAligned="false"
+            android:text="@string/go_home" />
+
+        <Button
+            android:id="@+id/go_details"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="45dp"
+            android:text="@string/go_details" />
+
+        <Button
+            android:id="@+id/uploada_btn"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:gravity="right|end"
+            android:text="Upload" />
+
+</LinearLayout>
+
+
     <TextView
         android:id="@+id/textView5"
         android:layout_width="90dp"
         android:layout_height="23dp"
         android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="13dp"
         android:layout_marginBottom="14dp"
         android:labelFor="@id/total_task_no"
-        android:text="@string/total_task"
-        android:layout_marginLeft="10dp" />
+        android:text="@string/total_task" />
 
     <NumberPicker
         android:id="@+id/total_task_no"
