--- a/app/src/main/res/layout/activity_task_detail_page.xml
+++ b/app/src/main/res/layout/activity_task_detail_page.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
@@ -57,6 +58,13 @@
 
         </TextView>
 
+        <ImageView
+            android:id="@+id/download_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="265dp"
+            android:text="Download"
+             />
 
 
     </RelativeLayout>
